[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/debug/AI_Level.gd" type="Script" id=1]
[ext_resource path="res://characters/keroppi/PlayerAni.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/resources/forest.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/keroppi/keroppi_back.tscn" type="PackedScene" id=4]
[ext_resource path="res://ball/Ball.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 38.8125 )

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="BottomGoalColor" type="ColorRect" parent="."]
margin_top = 528.0
margin_right = 400.0
margin_bottom = 600.0
color = Color( 0.768627, 0.623529, 0.235294, 1 )

[node name="TopGoalColor" type="ColorRect" parent="."]
margin_top = 1.0
margin_right = 400.0
margin_bottom = 73.0
color = Color( 0.768627, 0.623529, 0.235294, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -100.0
text = "Test"
align = 1
valign = 1

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
text = "0"
align = 1
valign = 1

[node name="ResultLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -100.0
text = "Test"
align = 1
valign = 1

[node name="WallLeft" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="WallLeft"]
position = Vector2( 16, 300.5 )
polygon = PoolVector2Array( 0, -268.5, 16, -268.5, 48, -236.5, 48, 211.5, 48, 243.5, 0, 243.5 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( 400, 0 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="WallRight"]
position = Vector2( -13.3, 8 )
scale = Vector2( 0.96875, 1 )
polygon = PoolVector2Array( -2.78711, 24, -35.8194, 56, -35.8194, 536, -2.78711, 536 )

[node name="TopGoal" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopGoal"]
position = Vector2( 200, 34.375 )
shape = SubResource( 2 )

[node name="BottomGoal" type="Area2D" parent="."]
position = Vector2( 0, 621 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomGoal"]
position = Vector2( 200, -54.1875 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ball" parent="." groups=["BallGroup"] instance=ExtResource( 7 )]
position = Vector2( 201, 264 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
cell_quadrant_size = 12
tile_data = PoolIntArray( 65536, 2, 0, 65537, 2, 196613, 65547, 2, 65541, 65548, 2, 2, 131072, 2, 65536, 131073, 2, 65538, 131083, 2, 65536, 131084, 2, 65538, 196608, 2, 65536, 196609, 2, 65538, 196619, 2, 65536, 196620, 2, 65538, 262144, 2, 65536, 262145, 2, 65538, 262155, 2, 65536, 262156, 2, 65538, 327680, 2, 65536, 327681, 2, 65538, 327691, 2, 65536, 327692, 2, 65538, 393216, 2, 65536, 393217, 2, 65538, 393227, 2, 65536, 393228, 2, 65538, 458752, 2, 65536, 458753, 2, 65538, 458763, 2, 65536, 458764, 2, 65538, 524288, 2, 65536, 524289, 2, 65538, 524299, 2, 65536, 524300, 2, 65538, 589824, 2, 65536, 589825, 2, 65538, 589835, 2, 65536, 589836, 2, 65538, 655360, 2, 65536, 655361, 2, 65538, 655371, 2, 65536, 655372, 2, 65538, 720896, 2, 65536, 720897, 2, 65538, 720907, 2, 65536, 720908, 2, 65538, 786432, 2, 65536, 786433, 2, 65538, 786443, 2, 65536, 786444, 2, 65538, 851968, 2, 65536, 851969, 2, 65538, 851979, 2, 65536, 851980, 2, 65538, 917504, 2, 65536, 917505, 2, 65538, 917515, 2, 65536, 917516, 2, 65538, 983040, 2, 65536, 983041, 2, 65538, 983051, 2, 65536, 983052, 2, 65538, 1048576, 2, 131072, 1048577, 2, 131074, 1048587, 2, 131072, 1048588, 2, 131074 )

[node name="YSort" type="YSort" parent="TileMap"]

[node name="Player" parent="TileMap/YSort" instance=ExtResource( 2 )]
position = Vector2( 188, 119 )

[node name="Player2" parent="TileMap/YSort" instance=ExtResource( 4 )]
position = Vector2( 187, 469 )
player_id = 2

[connection signal="body_entered" from="TopGoal" to="." method="_on_TopGoal_body_entered"]
[connection signal="body_entered" from="BottomGoal" to="." method="_on_BottomGoal_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
